--- a/NUFSCar/app/src/main/res/values/strings.xml
+++ b/NUFSCar/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">NUFSCar</string>
     <string name="search">Busca</string>
-    <string name="title_activity_base">BaseActivity</string>
+    <string name="title_activity_base">NUFSCar</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
